--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,12 @@ lerna-debug.log*
 
 node_modules
 .DS_Store
-dist
+dist/
 # .env
-.github/workflows
-.vscode
+.github/workflows/*
+.vscode.
 dist-ssr
-.gitignore
+.gitignore/
 coverage
 *.local
 
