--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "es2015",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "target": "es5",
+    "lib": ["ES2021", "dom"],
+    "target": "es6",
     "sourceMap": true,
     "allowJs": true,
     "paths": {
